--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <link rel="icon" type="image/x-icon" href="public/favicon.ico" />
+
+    <title>Layer2Balance - ETH Layer 2 Balances</title>
   </head>
   <body>
     <div id="root"></div>
